--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
-<app-my-nav></app-my-nav>
+<!-- <app-my-nav></app-my-nav>
 
-<!-- <div class="container" style="min-height: 15vw;">
+ <div class="container" style="min-height: 15vw;">
     <a [routerLink]="['/about']"> about</a> &nbsp;
     <a [routerLink]="['/help']"> help</a> &nbsp;
-</div> -->
-<router-outlet></router-outlet>
+</div>
+
+<router-outlet></router-outlet> -->
+
+<app-baga></app-baga>
+<app-waga></app-waga>
+
