--- a/src/app/components/baga/baga.component.html
+++ b/src/app/components/baga/baga.component.html
@@ -1,8 +1,8 @@
 <p>baga works!</p>
 
-<div *ngFor="let item of ar; index as i;  let odd = odd" >   
+<!-- <div *ngFor="let item of ar; index as i;  let odd = odd" >   
     <div  [ngStyle]= "{'background-color':odd? 'green' : 'red'}">{{i+1}} - description {{item.product}} : {{item.price}}</div>
 </div>
 
 
-{{singleProd.product}}
+{{singleProd.product}} -->
