--- a/src/app/components/waga/waga.component.html
+++ b/src/app/components/waga/waga.component.html
@@ -2,13 +2,14 @@
 
 Desc: <input #desc>
 Price: <input #price>
-
-<button (click)="add(desc.value,+price.value)">Click me!</button>
-<ul >
-    <li *ngFor="let product of products">
+&nbsp;
+<button (click)="add(desc.value,+price.value)">Add</button>
+<ul  className ="products" *ngFor="let product of products">
+    <!-- <li *ngFor="let product of products">
         <button (click)="updProd(product.id,desc.value,+price.value)"> Update </button>
         &nbsp;
         <button (click)="delProd(product.id)"> del &nbsp; {{product.id}}</button>
-        &nbsp; {{product.product}}  {{product.price}}</li>
+        &nbsp; {{product.product}}  {{product.price}}</li> -->
+        <app-det [myProduct]="product" (saveProd)="updProd($event)"></app-det>
     
 </ul>
